# conso_elec

./: LICENSE  main.py  pyproject.toml
.github/workflows/: build-binary.yml
analytics/: calculations.py  metrics.py  visualizations.py  weather_to_consumption.py
dash_app/: app.py
db/: database.py
extraction/: excel_extractor.py  weather.py
front/: streamlit_app.py
