[project]
name = "conso-elec"
version = "0.1.0"
description = "A small tool to manage your electricity consumption"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=2.18.2",
    "dash-bootstrap-components>=1.6.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "sqlalchemy>=2.0.36",
    "streamlit>=1.41.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.11.1",
]
